# esirs

./: .gitignore  Cargo.toml  README.md  ROADMAP.org  secrets.toml  update_test_payloads.sh
esirs/: Cargo.toml
esirs/src/: auth.rs  lib.rs  search.rs
examples/weblogin/: Cargo.toml
examples/weblogin/src/: main.rs
tst-data/search/: single-character.json
