[package]
name = "mysteriouspants-esi"
version = "0.1.0"
authors = ["Christopher \"Necrothitude\" Miller <xpm@mysteriouspants.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
serde = "*"
serde_json = "*"
url = "*"