[package]
name = "mysteriouspants-esi"
version = "0.1.0"
authors = ["Christopher \"Necrothitude\" Miller <xpm@mysteriouspants.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10.1"
jsonwebtoken = "6.0.1"
reqwest = "0.9.22"
serde = "1.0.101"
serde_json = "1.0.41"
url = "2.1.0"